solve z-index in setting box

--- a/css/master.css
+++ b/css/master.css
@@ -22,7 +22,7 @@ body{
 	top: 0;
 	width: 200px;
 	background-color: #fff;
-	z-index: 1000;
+	z-index: 1001;
 	height: 100vh;
 	border: 1px solid #AEAEAE;
 }
@@ -425,6 +425,8 @@ body{
 	border:1px solid #ccc;
 	padding: 20px;
 	z-index: 1001;
+	width:70%;
+	text-align:center;
 }
 .popup-box h3{
 	font-weight: bold;
